# profunctors

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.markdown  Data-Profunctor-Adjunction.html  Data-Profunctor-Cayley.html  Data-Profunctor-Choice.html  Data-Profunctor-Closed.html  Data-Profunctor-Codensity.html  Data-Profunctor-Collage.html  Data-Profunctor-Composition.html  Data-Profunctor-Lift.html  Data-Profunctor-Monad.html  Data-Profunctor-Monoid.html  Data-Profunctor-Ran.html  Data-Profunctor-Rep.html  Data-Profunctor-Rift.html  Data-Profunctor-Sieve.html  Data-Profunctor-Strong.html  Data-Profunctor-Tambara-Choice.html  Data-Profunctor-Tambara.html  Data-Profunctor-Trace.html  Data-Profunctor-Types.html  Data-Profunctor-Unsafe.html  Data-Profunctor.html  HLint.hs  LICENSE  README.markdown  cabal.haskell-ci  cabal.project  doc-index.html  index-frames.html  index.html  mini_Data-Profunctor-Adjunction.html  mini_Data-Profunctor-Closed.html  mini_Data-Profunctor-Codensity.html  mini_Data-Profunctor-Collage.html  mini_Data-Profunctor-Composition.html  mini_Data-Profunctor-Lift.html  mini_Data-Profunctor-Monad.html  (+11 more)
.github/workflows/: haskell-ci.yml  hlint.yml
Data/: Profunctor.hs
src/: Data-Profunctor-Adjunction.html  Data-Profunctor-Cayley.html  Data-Profunctor-Choice.html  Data-Profunctor-Closed.html  Data-Profunctor-Codensity.html  Data-Profunctor-Collage.html  Data-Profunctor-Composition.html  Data-Profunctor-Lift.html  Data-Profunctor-Monad.html  Data-Profunctor-Monoid.html  Data-Profunctor-Ran.html  Data-Profunctor-Rep.html  Data-Profunctor-Rift.html  Data-Profunctor-Sieve.html  Data-Profunctor-Strong.html  Data-Profunctor-Tambara-Choice.html  Data-Profunctor-Tambara.html  Data-Profunctor-Trace.html  Data-Profunctor-Types.html  Data-Profunctor-Unsafe.html  Data-Profunctor.html
src/Data/: Profunctor.hs
src/Data/Profunctor/: .Unsafe.hs.swp  Adjunction.hs  Cayley.hs  Choice.hs  Closed.hs  Cochoice.hs  Codensity.hs  Collage.hs  Composition.hs  Costrong.hs  Day.hs  Fix.hs  Functor.hs  Internal.hs  Lan.hs  Lift.hs  Mapping.hs  Monad.hs  Monoid.hs  Monoidal.hs  Ran.hs  Rep.hs  Rift.hs  Sieve.hs  Strong.hs  Tambara.hs  Trace.hs  Traversing.hs  Types.hs  Unsafe.hs  Yoneda.hs
src/Data/Profunctor/Functor/: Fix.hs
src/Data/Profunctor/Tambara/: Choice.hs  Sum.hs
