name:          profunctors
category:      Control, Categories
version:       5.1.2
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/profunctors/
bug-reports:   http://github.com/ekmett/profunctors/issues
copyright:     Copyright (C) 2011-2015 Edward A. Kmett
synopsis:      Profunctors
description:   Profunctors
tested-with:   GHC==7.0.1, GHC == 7.0.4, GHC == 7.2.2, GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1
build-type:    Simple
extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.markdown
  CHANGELOG.markdown
  HLint.hs

source-repository head
  type: git
  location: git://github.com/ekmett/profunctors.git

library
  build-depends:
    base                >= 4     && < 5,
    bifunctors          >= 5     && < 6,
    comonad             >= 4     && < 5,
    contravariant       >= 1     && < 2,
    distributive        >= 0.4.4 && < 1,
    tagged              >= 0.4.4 && < 1,
    transformers        >= 0.2   && < 0.5

  exposed-modules:
    Data.Profunctor
    Data.Profunctor.Adjunction
    Data.Profunctor.Cayley
    Data.Profunctor.Closed
    Data.Profunctor.Codensity
    Data.Profunctor.Composition
    Data.Profunctor.Monad
    Data.Profunctor.Monoid
    Data.Profunctor.Ran
    Data.Profunctor.Rep
    Data.Profunctor.Sieve
    Data.Profunctor.Tambara
    Data.Profunctor.Trace
    Data.Profunctor.Unsafe

  ghc-options:     -Wall -O2
  hs-source-dirs:  src

  default-language: Haskell2010
  other-extensions:
    CPP
    GADTs
    FlexibleContexts
    FlexibleInstances
    UndecidableInstances
    TypeFamilies
