name:          profunctors
category:      Control, Categories
version:       5.2.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/profunctors/
bug-reports:   http://github.com/ekmett/profunctors/issues
copyright:     Copyright (C) 2011-2015 Edward A. Kmett
synopsis:      Profunctors
description:   Profunctors
tested-with:   GHC == 7.0.4, GHC == 7.2.2, GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1
build-type:    Simple
extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.markdown
  CHANGELOG.markdown
  HLint.hs

source-repository head
  type: git
  location: git://github.com/ekmett/profunctors.git

library
  build-depends:
    base                >= 4     && < 5,
    base-orphans        >= 0.4   && < 0.7,
    bifunctors          >= 5.2   && < 6,
    comonad             >= 4     && < 6,
    contravariant       >= 1     && < 2,
    distributive        >= 0.4.4 && < 1,
    tagged              >= 0.4.4 && < 1,
    transformers        >= 0.2   && < 0.6

  exposed-modules:
    Data.Profunctor
    Data.Profunctor.Adjunction
    Data.Profunctor.Cayley
    Data.Profunctor.Choice
    Data.Profunctor.Closed
    Data.Profunctor.Composition
    Data.Profunctor.Mapping
    Data.Profunctor.Monad
    Data.Profunctor.Ran
    Data.Profunctor.Rep
    Data.Profunctor.Sieve
    Data.Profunctor.Strong
    Data.Profunctor.Traversing
    Data.Profunctor.Types
    Data.Profunctor.Unsafe
    Data.Profunctor.Yoneda

  ghc-options:     -Wall -O2
  hs-source-dirs:  src

  default-language: Haskell2010
  other-extensions:
    CPP
    GADTs
    FlexibleContexts
    FlexibleInstances
    UndecidableInstances
    TypeFamilies
