cabal-version: 2.4
name:          profunctors
category:      Control, Categories
version:       6
license:       BSD-2-Clause
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/profunctors/
bug-reports:   http://github.com/ekmett/profunctors/issues
copyright:     Copyright (C) 2011-2021 Edward A. Kmett
synopsis:      Profunctors
description:   Profunctors.
tested-with:   GHC == 8.6.5
             , GHC == 8.8.3
             , GHC == 8.10.1
build-type:    Simple
extra-source-files:
  .ghci
  .gitignore
  .hlint.yaml
  .vim.custom
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/profunctors.git

library
  build-depends:
    , base           >= 4.12    && < 5
    , base-orphans  ^>= 0.8.4
    , bifunctors    ^>= 6
    , comonad       ^>= 6
    , contravariant ^>= 1.5.3
    , tagged        ^>= 0.8.6.1
    , transformers  ^>= 0.5

  exposed-modules:
    Data.Profunctor
    Data.Profunctor.Adjunction
    Data.Profunctor.Cayley
    Data.Profunctor.Choice
    Data.Profunctor.Composition
    Data.Profunctor.Monad
    Data.Profunctor.Ran
    Data.Profunctor.Strong
    Data.Profunctor.Traversing
    Data.Profunctor.Types
    Data.Profunctor.Unsafe
    Data.Profunctor.Yoneda

  -- moved to distributive
  --  Data.Profunctor.Mapping
  --  Data.Profunctor.Closed
  --  Data.Profunctor.Rep
  --  Data.Profunctor.Sieve

  ghc-options: -Wall -O2 -Wno-trustworthy-safe -Wno-star-is-type

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

  hs-source-dirs:  src

  default-language: Haskell2010
  other-extensions:
    CPP
    GADTs
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    UndecidableInstances
    TypeFamilies
